--- a/chicco/slider2.html
+++ b/chicco/slider2.html
@@ -187,10 +187,10 @@
 </head>
 <body class="AmericanSlide" style="margin:0px;">
 	 <div class="te-container">
-        <a href="https://www.walmart.com.mx/bebes-chicco?utm_source=facebook&utm_medium=social&utm_campaign=online_mg_fb_rev_jbm_chicco_180528" target="_blank">
+        <a href="https://listado.mercadolibre.com.mx/_Tienda_chicco_Deal_hot-sale" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-                <div class="te-images"> <img src="https://i.imgur.com/Z9FXIsk.jpg" alt="" /> <img src="https://i.imgur.com/5qTwDuT.jpg" alt="" /> <img src="https://i.imgur.com/7pDYetR.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/Z9FXIsk.jpg" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/pLZiaWn.jpg" alt="" /> <img src="https://i.imgur.com/5qTwDuT.jpg" alt="" /> <img src="https://i.imgur.com/7pDYetR.jpg" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/pLZiaWn.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
