--- a/petrobras/fade.html
+++ b/petrobras/fade.html
@@ -59,11 +59,11 @@
         }
 
         .PetrobrasFade .bzm_cover {
-            height: 150px
+            height: 138px
         }
 
         .PetrobrasFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/cjYnOjW.jpg)
+            background-image: url(https://i.imgur.com/HTEZ4kA.png)
         }
 
         .PetrobrasFade .bg.cover-2 {
@@ -262,10 +262,13 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="font-family:'PetrobrasSans_Bd';color:#000;line-height:100%;font-size:18px;">¡Vive la fiebre tricolor!</span></div>
-             <div class="bzm_text" style="margin-top:-2.5px;"> <span style="font-family:'PetrobrasSans_Bd'; color:#000;line-height:100%;font-size:10px;"><i>Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.</i></span></div>
-            <div style="bottom:0px;height: 26px;text-align:right;margin-top:10px;"> 
+            <div class="bzm_text"style="margin-top:-18px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:100%; font-size:18px">¡Vive la fiebre tricolor!</span></div>
+             <div class="bzm_text" style="margin-top:-10px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000;line-height:100%;font-size:10px;"><i>Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere un balón, una gorra y una cantimplora.</i></span></div>
+            <div style="bottom:0px;height: 26px;text-align:right;margin-top:3px;"> 
               <img src="https://i.imgur.com/FvRVjdT.png" style="height:21px;margin-right:0px;">
+            </div>
+             <div style="bottom:0px;height:26px;text-align:left;margin-top:1px;"> 
+              <img src="https://i.imgur.com/tnERmmy.png" style="height:24px;margin-right:0px;">
             </div>
         </a>
     </div>
